# fusion_lidar_camera

./: CMakeLists.txt  package.xml
config/: calib.json  config.yaml
include/fusion_lidar_camera/: direct_node.hpp  fusion_node.hpp
launch/: direct_camera.launch.py  fusion_launch.py  roi_fusion_launch.py  simple_fusion_launch.py  test_fusion_launch.py
src/: direct_camera_node.cpp  fusion_node.cpp  main.cpp  simple_main.cpp  test_main.cpp
