<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_lidar_camera</name>
  <version>0.0.0</version>
  <description>LiDAR-Camera fusion package for colored point clouds and projected images</description>
  <maintainer email="yakan130803@gmail.com">yakan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yolo_msgs</depend>
  
  <!-- System dependencies -->
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>libopencv-core-dev</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
